# NativeBlade

./: .gitignore  ADMOB.md  ANALYTICS.md  ANIMATIONS.md  ARCHITECTURE.md  BUILD.md  CACHE.md  COMMANDS.md  COMPONENTS.md  CONFIGURATION.md  CONTRIBUTING.md  DATABASE.md  DIRECTIVES.md  FILESYSTEM.md  LICENSE.md  LIFECYCLE.md  MCP.md  MEDIA.md  MULTI-LANGUAGE.md  NATIVE-SHELL.md  NAVIGATE.md  NETWORK.md  PAYMENTS.md  PLUGINS.md  PORTAL.md  PUBLISH.md  PUSH.md  README.md  SCHEDULER.md  SENSORS.md  SOCKET.md  SPONSORS.md  SUPPORT.md  TASKS.md  UPDATES.md  WINDOWS.md  composer.json  package-lock.json  package.json  phpunit.xml
docs/: .gitignore  (+5 more)
rust/: Cargo.toml
rust/plugins/admob/: Cargo.toml  build.rs
rust/plugins/admob/android/: build.gradle.kts
rust/plugins/admob/android/src/main/: AndroidManifest.xml
rust/plugins/admob/ios/: Package.swift
rust/plugins/admob/ios/Sources/: AdMobPlugin.swift
rust/plugins/admob/permissions/: default.toml
rust/plugins/admob/permissions/autogenerated/: reference.md
rust/plugins/admob/permissions/autogenerated/commands/: request_consent.toml
rust/plugins/admob/permissions/schemas/: schema.json
rust/plugins/admob/src/: desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
rust/plugins/analytics/: Cargo.toml  build.rs
rust/plugins/analytics/android/: build.gradle.kts
rust/plugins/analytics/android/src/main/: AndroidManifest.xml
rust/plugins/analytics/ios/: Package.swift
rust/plugins/analytics/ios/Sources/: AnalyticsPlugin.swift
rust/plugins/analytics/permissions/: default.toml
rust/plugins/analytics/src/: desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
rust/plugins/media/: Cargo.toml  build.rs
rust/plugins/media/android/: build.gradle.kts
rust/plugins/media/android/src/main/: AndroidManifest.xml
rust/plugins/media/ios/: Package.swift
rust/plugins/media/ios/Sources/: NativeBladeMediaPlugin.swift
rust/plugins/media/permissions/: default.toml
rust/plugins/media/permissions/autogenerated/: reference.md
rust/plugins/media/permissions/autogenerated/commands/: pick_from_camera.toml  pick_from_gallery.toml  pick_video.toml  read_asset.toml
rust/plugins/media/permissions/schemas/: schema.json
rust/plugins/media/src/: desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
rust/plugins/native-nav/: Cargo.toml  build.rs
rust/plugins/native-nav/android/: build.gradle.kts
rust/plugins/native-nav/ios/: Package.swift
rust/plugins/native-nav/ios/Sources/: NativeNavPlugin.swift
rust/plugins/native-nav/permissions/: default.toml
rust/plugins/native-nav/src/: desktop.rs  error.rs  lib.rs  mobile.rs
rust/plugins/network/: Cargo.toml  build.rs
rust/plugins/network/android/: build.gradle.kts
rust/plugins/network/ios/: Package.swift
rust/plugins/network/ios/Sources/: NetworkPlugin.swift
rust/plugins/network/permissions/: default.toml
rust/plugins/network/permissions/autogenerated/: reference.md
rust/plugins/network/permissions/schemas/: schema.json
rust/plugins/network/src/: desktop.rs  error.rs  lib.rs  mobile.rs
rust/plugins/payments/: Cargo.toml  build.rs
rust/plugins/payments/android/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
rust/plugins/payments/ios/: Package.swift
rust/plugins/payments/ios/Sources/: PaymentsPlugin.swift
rust/plugins/payments/permissions/: default.toml
rust/plugins/payments/permissions/autogenerated/: reference.md
rust/plugins/payments/permissions/schemas/: schema.json
rust/plugins/payments/src/: desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
rust/plugins/push/: Cargo.toml  build.rs
rust/plugins/push/android/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
rust/plugins/push/ios/: Package.swift
rust/plugins/push/ios/Sources/: NativeBladePushPlugin.swift  PendingPushes.swift
rust/plugins/push/permissions/: default.toml
rust/plugins/push/permissions/autogenerated/: reference.md
rust/plugins/push/permissions/schemas/: schema.json
rust/plugins/push/src/: desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
rust/plugins/review/: Cargo.toml  build.rs
rust/plugins/review/android/: build.gradle.kts
rust/plugins/review/ios/: Package.swift
rust/plugins/review/ios/Sources/: InAppReviewPlugin.swift
rust/plugins/review/permissions/: default.toml
rust/plugins/review/src/: desktop.rs  error.rs  lib.rs  mobile.rs
rust/plugins/secure-storage/: Cargo.toml  build.rs
rust/plugins/secure-storage/android/: build.gradle.kts
rust/plugins/secure-storage/ios/: Package.swift
rust/plugins/secure-storage/ios/Sources/: SecureStoragePlugin.swift
rust/plugins/secure-storage/permissions/: default.toml
rust/plugins/secure-storage/src/: desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
rust/plugins/sensors/: Cargo.toml  build.rs
rust/plugins/sensors/android/: build.gradle.kts
rust/plugins/sensors/ios/: Package.swift
rust/plugins/sensors/ios/Sources/: SensorsPlugin.swift
rust/plugins/sensors/permissions/: default.toml
rust/plugins/sensors/permissions/autogenerated/: reference.md
rust/plugins/sensors/permissions/schemas/: schema.json
rust/plugins/sensors/src/: error.rs  lib.rs
rust/plugins/sharing/: Cargo.toml  build.rs
rust/plugins/sharing/android/: build.gradle.kts
rust/plugins/sharing/ios/: Package.swift
rust/plugins/sharing/ios/Sources/: SharePlugin.swift
rust/plugins/sharing/permissions/: default.toml
rust/plugins/sharing/src/: desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
rust/plugins/tasks/: Cargo.toml  build.rs
rust/plugins/tasks/android/: build.gradle.kts  consumer-rules.pro
rust/plugins/tasks/ios/: Package.swift
rust/plugins/tasks/ios/Sources/: TasksPlugin.swift
rust/plugins/tasks/permissions/: default.toml
rust/plugins/tasks/permissions/autogenerated/: reference.md
rust/plugins/tasks/permissions/schemas/: schema.json
rust/plugins/tasks/src/: android.rs  commands.rs  courier.rs  error.rs  ios_entry.rs  lib.rs  model.rs  store.rs
rust/src/: lib.rs
rust/src/commands/: bridge.rs  config.rs  database.rs  fileops.rs  health.rs  menu.rs  mod.rs  scheduler.rs  tray.rs  window.rs
(+453 files in other folders)
