[package]
name = "nativeblade-tauri"
version = "0.1.0"
edition = "2021"
description = "Tauri runtime for NativeBlade - Laravel desktop/mobile apps"
license = "MIT"

[lib]
name = "nativeblade"
crate-type = ["rlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mobile)', 'cfg(desktop)', 'cfg(dev)'] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
dotenvy = "0.15"
