[package]
name = "nativeblade-tauri"
version = "0.1.0"
edition = "2021"
description = "Tauri runtime for NativeBlade - Laravel desktop/mobile apps"
license = "MIT"

[lib]
name = "nativeblade"
crate-type = ["rlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mobile)', 'cfg(desktop)', 'cfg(dev)'] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-geolocation = "2"
tauri-plugin-haptics = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-http = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-upload = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
dotenvy = "0.15"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2"
tauri-plugin-barcode-scanner = "2"
tauri-plugin-nfc = "2"
