[workspace]
members = ["plugins/push", "plugins/media"]

[package]
name = "nativeblade-tauri"
version = "0.1.0"
edition = "2021"
description = "Tauri runtime for NativeBlade - Laravel desktop/mobile apps"
license = "MIT"

[lib]
name = "nativeblade"
crate-type = ["rlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mobile)', 'cfg(desktop)', 'cfg(dev)'] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
croner = "2"
chrono = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "mysql", "postgres", "sqlite", "chrono", "rust_decimal"] }
rust_decimal = "1"
tokio = { version = "1", features = ["time", "sync", "macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
dotenvy = "0.15"

# Always-on plugins. NativeBlade core depends on them, so they're
# unconditionally compiled into every build.
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
