[package]
name = "tauri-plugin-nativeblade-native-nav"
version = "0.1.0"
edition = "2021"
description = "Native page-transition compositor for NativeBlade (snapshot overlay animated by the OS)"
license = "MIT"
build = "build.rs"
links = "tauri-plugin-nativeblade-native-nav"

[lib]
name = "tauri_plugin_nativeblade_native_nav"
path = "src/lib.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mobile)', 'cfg(desktop)'] }

[dependencies]
tauri = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2.4", features = ["build"] }
