[package]
name = "tauri-plugin-nativeblade-push"
version = "0.1.0"
edition = "2021"
description = "Push notifications (FCM/APNS) plugin for NativeBlade"
license = "MIT"
build = "build.rs"
links = "tauri-plugin-nativeblade-push"

[lib]
name = "tauri_plugin_nativeblade_push"
path = "src/lib.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mobile)', 'cfg(desktop)'] }

[dependencies]
tauri = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2.4", features = ["build"] }

[target.'cfg(target_os = "ios")'.dependencies]
tauri = { version = "2", default-features = false, features = ["wry"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
notify-rust = "4"
