[package]
name = "tauri-plugin-nativeblade-tasks"
version = "0.1.0"
edition = "2021"
description = "Background task courier (fetch/post with parking and outbox) for NativeBlade"
license = "MIT"
build = "build.rs"
links = "tauri-plugin-nativeblade-tasks"

[lib]
name = "tauri_plugin_nativeblade_tasks"
path = "src/lib.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mobile)', 'cfg(desktop)'] }

[dependencies]
tauri = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["time", "sync"] }

[build-dependencies]
tauri-plugin = { version = "2.4", features = ["build"] }

[dev-dependencies]
tempfile = "3"
mockito = "1"

[target.'cfg(target_os = "ios")'.dependencies]
tauri = { version = "2", default-features = false, features = ["wry"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
